--- a/src/components/reusable/numberInput/numberInput.scss
+++ b/src/components/reusable/numberInput/numberInput.scss
@@ -17,7 +17,7 @@ input {
   display: block;
   flex-grow: 1;
   min-width: 48px;
-  border: 1px solid var(--kd-color-border-ui-default);
+  border: 1px solid var(--kd-color-border-forms-default);
   border-radius: 4px;
   height: 48px;
   padding: 0 16px;
@@ -36,6 +36,10 @@ input {
 
   &.icon--left {
     padding-left: 48px;
+  }
+
+  &:not([disabled])[invalid] {
+    border-color: var(--kd-color-border-variants-destructive);
   }
 }
 
